k8s/base/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
